fix: alignment of the squeeze in the burger menu depending on the height

--- a/shelter/css/burger-main.css
+++ b/shelter/css/burger-main.css
@@ -63,6 +63,9 @@
 
 @media (max-width: 767.5px) {
 	.header__list {
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		overflow: hidden;
 		position: relative;
 		width: 320px;
@@ -70,7 +73,6 @@
 		background: var(--color-dark-3xl);
 		flex-direction: column;
 		gap: 41px 0;
-		padding: 248px 39px 248px;
 		position: fixed;
 		right: 0;
 		top: 0px;
