--- a/shelter/css/burger-pets.css
+++ b/shelter/css/burger-pets.css
@@ -60,12 +60,14 @@
 
 @media (max-width: 767.5px) {
 	.header__list {
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		width: 320px;
 		height: 100vh;
 		background: var(--color-light-xl);
 		flex-direction: column;
 		gap: 41px 0;
-		padding: 248px 39px 248px;
 		position: fixed;
 		right: 0;
 		top: 0px;
